--- a/index.html
+++ b/index.html
@@ -7,19 +7,89 @@
     <title>Secret Agent Supply Inc</title>
   </head>
   <body>
-    <!-- Header -->
+
+<div class="siteContainer">
+
+<!-- Header -->
+
 <header>
   <div class="head">
     <img src="resources/images/logo.png">
     <span>SECRET AGENT SUPPLY INC.</span>
   </div>
 </header>
+
+<!-- Main Image -->
+
   <div class="banner">
     <div class="bannerBox">
       <h4>NEW ARRIVAL</h4>
-      <br>
       <h1>SPORT BIKES AND MOTORCYCLES</h1>
     </div>
   </div>
+
+<!-- Navigtation -->
+
+  <div class="nav">
+      <nav>
+        <span>Eyewear</span>
+        <span>Apparel</span>
+        <span>Gadgets</span>
+        <span>Vehicles</span>
+        <span>Classes</span>
+        <span>Contact</span>
+      </nav>
+    </div>
+
+<!-- Image Boxes   -->
+
+  <div class="imageBoxes">
+    <div class="imageBox1">
+    <img src="resources/images/pen.png">
+    </div>
+    <div class="imageBoxText">
+      <p>Exploding Pen</p>
+    </div>
+  </div>
+  <div class="imageBoxes">
+    <div class="imageBox2">
+    <img src="resources/images/watch.png">
+    </div>
+    <div class="imageBoxText">
+      <p>Cellular Watch</p>
+    </div>
+  </div>
+  <div class="imageBoxes">
+    <div class="imageBox3">
+    <img src="resources/images/glasses.png">
+    </div>
+    <div class="imageBoxText">
+      <p>Thermal Glasses</p>
+    </div>
+  </div>
+
+<!-- Black Bars -->
+
+  <div class="blackBar">
+    <div class="blackBarText">
+    <p>Location</p>
+    </div>
+    <p>-47.346436, 84.32354</p>
+  </div>
+  <div class="blackBar">
+    <div class="blackBarText">
+    <p>Hours</p>
+    </div>
+    <p>0800 - 1800</p>
+  </div>
+
+<!-- footer Section -->
+
+  <footer>
+    <div class="footer">
+      <p>Copyright Secret Agent Supply Inc.</p>
+    </div>
+  </footer>
+</div>
   </body>
 </html>
