--- a/index.html
+++ b/index.html
@@ -32,41 +32,49 @@
 
   <div class="nav">
       <nav>
-        <span>Eyewear</span>
-        <span>Apparel</span>
-        <span>Gadgets</span>
-        <span>Vehicles</span>
-        <span>Classes</span>
-        <span>Contact</span>
+        <ul>
+          <li>Eyewear</li>
+          <li>Apparel</li>
+          <li>Gadgets</li>
+          <li>Vehicles</li>
+          <li>Classes</li>
+          <li>Contact</li>
+        </ul>
       </nav>
     </div>
 
 <!-- Image Boxes   -->
 
-  <div class="imageBoxes">
-    <div class="imageBox1">
-    <img src="resources/images/pen.png">
-    </div>
-    <div class="imageBoxText">
+  <div class="imageBoxContainer">
+
+    <div class="imageBox">
+      <div class="productImage">
+      <img src="resources/images/pen.png">
+      </div>
+      <div class="imageBoxText">
       <p>Exploding Pen</p>
+      </div>
     </div>
-  </div>
-  <div class="imageBoxes">
-    <div class="imageBox2">
-    <img src="resources/images/watch.png">
-    </div>
-    <div class="imageBoxText">
+
+    <div class="imageBox">
+      <div class="productImage">
+      <img src="resources/images/watch.png">
+      </div>
+      <div class="imageBoxText">
       <p>Cellular Watch</p>
+      </div>
     </div>
-  </div>
-  <div class="imageBoxes">
-    <div class="imageBox3">
-    <img src="resources/images/glasses.png">
-    </div>
-    <div class="imageBoxText">
+
+    <div class="imageBox">
+      <div class="productImage">
+      <img src="resources/images/glasses.png">
+      </div>
+      <div class="imageBoxText">
       <p>Thermal Glasses</p>
+      </div>
     </div>
   </div>
+
 
 <!-- Black Bars -->
 
